--- a/src/main/resources/templates/account/edit_balances.html
+++ b/src/main/resources/templates/account/edit_balances.html
@@ -10,7 +10,7 @@
     <form th:action="@{/accounts/{aId}/editBalances(aId=${accountId})}" th:method="post">
         <div class="mb-3" th:each="bal, iter : ${account.balances()}">
             <label th:for="${'tradeable-' + bal.id()}" class="form-label" th:text="${bal.symbol()}"></label>
-            <input type="number" min="0" th:value="${bal.amount()}" th:name="${'tradeable-' + bal.id()}" class="form-control"/>
+            <input type="number" min="0" th:value="${bal.amount()}" th:name="${'tradeable-' + bal.id()}" class="form-control" required/>
         </div>
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
