--- a/src/main/resources/templates/exchange/accounts.html
+++ b/src/main/resources/templates/exchange/accounts.html
@@ -7,8 +7,6 @@
 <div id="content" class="container">
     <h1>Accounts</h1>
 
-    <a class="btn btn-primary" th:href="@{/exchanges/{eId}/addAccount(eId=${exchangeId})}">Add Account</a>
-
     <table class="table">
         <thead>
             <tr>
@@ -23,9 +21,11 @@
                 <td><a th:href="@{/accounts/{id}(id=${account.id()})}" th:text="${account.number()}"></a></td>
                 <td th:text="${account.name()}"></td>
                 <td th:text="${account.admin()}"></td>
-                <td th:text="${account.totalBalance()}"></td>
+                <td class="currency" th:text="${account.totalBalance()}"></td>
                 <td><a th:href="@{/exchanges/{eId}/removeAccount/{aId}(eId=${exchangeId}, aId=${account.id()})}">Remove</a></td>
             </tr>
         </tbody>
     </table>
+
+    <a class="btn btn-primary" th:href="@{/exchanges/{eId}/addAccount(eId=${exchangeId})}">Add Account</a>
 </div>
