--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -22,6 +22,9 @@
                     <a class="nav-link" th:href="@{/}">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/exchanges}">Exchanges</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/users/{id}(id=${#authentication.getPrincipal().getId()})}">My Profile</a>
                 </li>
             </ul>
