--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -13,6 +13,10 @@
                 <th scope="row">Username</th>
                 <td th:text="${user.username()}"></td>
             </tr>
+            <tr>
+                <th scope="row">Email</th>
+                <td th:text="${user.email()}"></td>
+            </tr>
         </tbody>
     </table>
 </div>
