--- a/src/main/resources/templates/exchange/accounts.html
+++ b/src/main/resources/templates/exchange/accounts.html
@@ -7,13 +7,14 @@
 <div id="content" class="container">
     <h1>Accounts</h1>
 
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th>Number</th>
                 <th>Name</th>
                 <th>Admin</th>
                 <th>Balance</th>
+                <th>Remove</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +22,7 @@
                 <td><a th:href="@{/accounts/{id}(id=${account.id()})}" th:text="${account.number()}"></a></td>
                 <td th:text="${account.name()}"></td>
                 <td th:text="${account.admin()}"></td>
-                <td class="currency" th:text="${account.totalBalance()}"></td>
+                <td class="monospace" th:text="${account.totalBalance()}"></td>
                 <td><a th:href="@{/exchanges/{eId}/removeAccount/{aId}(eId=${exchangeId}, aId=${account.id()})}">Remove</a></td>
             </tr>
         </tbody>
