--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,13 +11,16 @@
             <h1 class="display-4">Welcome to Coyote Credit</h1>
 
             <p class="lead">
-                A simulated asset trading platform developed for building a stronger understanding of investment and wealth management.
+                A simulated asset trading platform developed for building a stronger understanding
+                of investment and wealth management.
             </p>
 
             <hr>
 
             <p>
-                You can visit the <a th:href="@{/exchanges}">Exchanges</a> page to view a list of exchanges that you're participating in.
+                You can visit the <a class="colored-link" th:href="@{/exchanges}">Exchanges</a> page
+                to view a list of exchanges that you're participating in. Within an exchange, you
+                may buy and sell tradeable assets, and transfer funds to other accounts.
             </p>
         </div>
     </div>
