--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,9 +5,9 @@
         th:replace="~{layout/basic_page :: layout (title='My Profile', content=~{::#content})}"
 >
 <div id="content" class="container">
-    <h1>My Profile</h1>
+    <h1 class="display-4">My Profile</h1>
 
-    <table class="table">
+    <table class="table table-dark">
         <tbody>
             <tr>
                 <th scope="row">Username</th>
