--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -6,54 +6,78 @@
 >
 
 <div id="content" class="container">
-    <h1>Account <span th:text="${account.number()}"></span></h1>
-    <p>In <a th:href="@{/exchanges/{id}(id=${account.exchange().id()})}" th:text="${account.exchange().name()}"></a></p>
-    <p>Total value of <span class="currency" th:text="${account.totalBalance()}"></span>&nbsp;<span th:text="${account.exchange().primaryTradeable()}"></span></p>
+    <h1 class="display-4">Account <span th:text="${account.number()}"></span></h1>
 
-    <h3>Overview</h3>
+    <div class="card text-white bg-dark mb-3">
+        <div class="card-body">
+            <h5 class="card-title">Overview</h5>
+            <dl class="row">
+                <dt class="col-sm-6">Number</dt>
+                <dd class="col-sm-6 monospace" th:text="${account.number()}"></dd>
+                <dt class="col-sm-6">Account Holder Name</dt>
+                <dd class="col-sm-6" th:text="${account.name()}"></dd>
+                <dt class="col-sm-6">Exchange</dt>
+                <dd class="col-sm-6">
+                    <a class="colored-link" th:href="@{/exchanges/{id}(id=${account.exchange().id()})}" th:text="${account.exchange().name()}"></a>
+                </dd>
+                <dt class="col-sm-6">Total Value</dt>
+                <dd class="col-sm-6">
+                    <span class="monospace" th:text="${account.totalBalance()}"></span>&nbsp;<span th:text="${account.exchange().primaryTradeable()}"></span>
+                </dd>
+            </dl>
+            <a class="btn btn-success" th:href="@{/trade/{account}(account=${account.id()})}">Trade</a>
+            <a class="btn btn-success" th:href="@{/accounts/{aId}/transfer(aId=${account.id()})}">Transfer</a>
+            <a class="btn btn-primary" th:if="${account.userAdmin()}" th:href="@{/accounts/{aId}/editBalances(aId=${account.id()})}">Edit Balances</a>
+        </div>
+    </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Asset</th>
-                <th>Type</th>
-                <th>Balance</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="bal : ${account.balances()}">
-                <td th:text="${bal.symbol()}"></td>
-                <td th:text="${bal.type()}"></td>
-                <td class="currency" th:text="${bal.amount()}"></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="card text-white bg-dark mb-3">
+        <div class="card-body">
+            <h5 class="card-title">Tradeable Assets</h5>
+            <table class="table table-dark">
+                <thead>
+                <tr>
+                    <th>Asset</th>
+                    <th>Type</th>
+                    <th>Balance</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="bal : ${account.balances()}">
+                    <td>
+                        <a class="colored-link" th:href="@{/tradeables/{tId}(tId=${bal.id()})}" th:text="${bal.symbol()}"></a>
+                    </td>
+                    <td th:text="${bal.type()}"></td>
+                    <td class="monospace" th:text="${bal.amount()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-    <a class="btn btn-success" th:href="@{/trade/{account}(account=${account.id()})}">Trade</a>
-    <a class="btn btn-success" th:href="@{/accounts/{aId}/transfer(aId=${account.id()})}">Transfer</a>
-    <a class="btn btn-primary" th:if="${account.userAdmin()}" th:href="@{/accounts/{aId}/editBalances(aId=${account.id()})}">Edit Balances</a>
-
-    <div th:if="${!account.recentTransactions().isEmpty()}">
-        <h3>Recent Transactions</h3>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>From</th>
-                <th>Amount From</th>
-                <th>To</th>
-                <th>Amount To</th>
-                <th>Timestamp</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="tx : ${account.recentTransactions()}">
-                <td th:text="${tx.from().name()}"></td>
-                <td class="currency" th:text="${tx.fromAmount()}"></td>
-                <td th:text="${tx.to().name()}"></td>
-                <td class="currency" th:text="${tx.toAmount()}"></td>
-                <td th:text="${tx.timestamp()}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="card text-white bg-dark mb-3" th:if="${!account.recentTransactions().isEmpty()}">
+        <div class="card-body">
+            <h5 class="card-title">Recent Transactions</h5>
+            <table class="table table-dark">
+                <thead>
+                <tr>
+                    <th>From</th>
+                    <th>Amount From</th>
+                    <th>To</th>
+                    <th>Amount To</th>
+                    <th>Timestamp</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="tx : ${account.recentTransactions()}">
+                    <td th:text="${tx.from().symbol()}"></td>
+                    <td class="monospace" th:text="${tx.fromAmount()}"></td>
+                    <td th:text="${tx.to().symbol()}"></td>
+                    <td class="monospace" th:text="${tx.toAmount()}"></td>
+                    <td th:text="${tx.timestamp()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
