--- a/src/main/resources/templates/exchange/exchanges.html
+++ b/src/main/resources/templates/exchange/exchanges.html
@@ -5,8 +5,8 @@
         th:replace="~{layout/basic_page :: layout (title='Exchanges', content=~{::#content})}"
 >
 <div id="content" class="container">
-    <h1>Exchanges</h1>
-    <table class="table">
+    <h1 class="display-4">Exchanges</h1>
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th>Name</th>
@@ -18,13 +18,13 @@
         <tbody>
             <tr th:each="ed : ${exchangeData}">
                 <td>
-                    <a th:text="${ed.exchange().name()}" th:href="@{/exchanges/{eId}(eId=${ed.exchange().id()})}"></a>
+                    <a class="colored-link" th:text="${ed.exchange().name()}" th:href="@{/exchanges/{eId}(eId=${ed.exchange().id()})}"></a>
                 </td>
                 <td th:text="${ed.exchange().primaryTradeable()}"></td>
                 <td>
-                    <a th:text="${ed.account().number()}" th:href="@{/accounts/{aId}(aId=${ed.account().id()})}"></a>
+                    <a class="colored-link" th:text="${ed.account().number()}" th:href="@{/accounts/{aId}(aId=${ed.account().id()})}"></a>
                 </td>
-                <td class="currency" th:text="${ed.account().totalBalance()}"></td>
+                <td class="monospace" th:text="${ed.account().totalBalance()}"></td>
             </tr>
         </tbody>
     </table>
