--- a/src/main/resources/templates/layout/basic_page.html
+++ b/src/main/resources/templates/layout/basic_page.html
@@ -9,14 +9,10 @@
     <meta charset="UTF-8">
     <title th:text="${'Coyote Credit - ' + title}">Coyote Credit</title>
 
+    <link rel="stylesheet" href="/static/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-    >
 
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico"/>
 </head>
 
 <body>
@@ -30,10 +26,6 @@
         </div>
     </div>
 
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"
-    ></script>
+    <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
 </body>
 </html>
