Removed add account functionality in favor of invite user.

--- a/src/main/resources/templates/account/transfer.html
+++ b/src/main/resources/templates/account/transfer.html
@@ -2,7 +2,7 @@
 <html
         lang="en"
         xmlns:th="http://www.thymeleaf.org"
-        th:replace="~{layout/basic_page :: layout (title='Add Account', content=~{::#content})}"
+        th:replace="~{layout/basic_page :: layout (title='Transfer', content=~{::#content})}"
 >
 <div id="content" class="container">
     <h1 class="display-4">Transfer</h1>
