--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html
         lang="en"
         xmlns:th="http://www.thymeleaf.org"
-        th:replace="~{layout/basic_page :: layout (title='Home', content=~{::#content})}"
+        th:replace="~{layout/basic_page :: layout (title='Error', content=~{::#content})}"
 >
 <div id="content" class="container">
     <div class="row justify-content-center">
