--- a/src/main/resources/templates/exchange/accounts.html
+++ b/src/main/resources/templates/exchange/accounts.html
@@ -19,14 +19,18 @@
         </thead>
         <tbody>
             <tr th:each="account : ${accounts}">
-                <td><a th:href="@{/accounts/{id}(id=${account.id()})}" th:text="${account.number()}"></a></td>
+                <td><a class="colored-link" th:href="@{/accounts/{id}(id=${account.id()})}" th:text="${account.number()}"></a></td>
                 <td th:text="${account.name()}"></td>
                 <td th:text="${account.admin()}"></td>
                 <td class="monospace" th:text="${account.totalBalance()}"></td>
-                <td><a th:href="@{/exchanges/{eId}/removeAccount/{aId}(eId=${exchangeId}, aId=${account.id()})}">Remove</a></td>
+                <td><a
+                        class="colored-link"
+                        th:href="@{/exchanges/{eId}/removeAccount/{aId}(eId=${exchangeId}, aId=${account.id()})}"
+                        th:if="${account.userId() != #authentication.getPrincipal().getId()}"
+                >Remove</a></td>
             </tr>
         </tbody>
     </table>
 
-    <a class="btn btn-primary" th:href="@{/exchanges/{eId}/addAccount(eId=${exchangeId})}">Add Account</a>
+    <a class="btn btn-primary" th:href="@{/exchanges/{eId}/inviteUser(eId=${exchangeId})}">Invite User</a>
 </div>
