--- a/src/main/resources/templates/exchange/removeAccount.html
+++ b/src/main/resources/templates/exchange/removeAccount.html
@@ -2,7 +2,7 @@
 <html
         lang="en"
         xmlns:th="http://www.thymeleaf.org"
-        th:replace="~{layout/basic_page :: layout (title='Add Account', content=~{::#content})}"
+        th:replace="~{layout/basic_page :: layout (title='Remove Account', content=~{::#content})}"
 >
 <div id="content" class="container">
     <h1>Remove Account</h1>
