--- a/src/main/resources/templates/tradeable.html
+++ b/src/main/resources/templates/tradeable.html
@@ -2,7 +2,7 @@
 <html
         lang="en"
         xmlns:th="http://www.thymeleaf.org"
-        th:replace="~{layout/basic_page :: layout (title='Account', content=~{::#content})}"
+        th:replace="~{layout/basic_page :: layout (title='Tradeable', content=~{::#content})}"
 >
 <div id="content" class="container">
     <h1>
