--- a/src/main/resources/templates/public/login.html
+++ b/src/main/resources/templates/public/login.html
@@ -6,10 +6,11 @@
 >
 <div id="content" class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-4">
-
-
-            <h1>Login</h1>
+        <div class="col-lg-5">
+            <div class="text-center">
+                <img src="/static/images/icon_256.png" alt="Coyote Credit Logo" width="256"/>
+            </div>
+            <h1 class="text-center font-pacifico">Coyote Credit</h1>
             <form th:action="@{/login/processing}" th:method="post">
                 <div class="mb-3">
                     <label for="usernameInput" class="form-label">Username</label>
