--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,29 +1,38 @@
 @font-face {
     font-family: SpaceMono;
-    src: url("/static/font/SpaceMono-Regular.ttf");
+    src: url("/static/font/spacemono/SpaceMono-Regular.ttf");
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
+    font-family: SpaceMono;
+    src: url("/static/font/spacemono/SpaceMono-Italic.ttf");
+    font-style: italic;
+    font-weight: normal;
+}
+@font-face {
+    font-family: SpaceMono;
+    src: url("/static/font/spacemono/SpaceMono-Bold.ttf");
+    font-style: normal;
+    font-weight: bold;
+}
+@font-face {
+    font-family: SpaceMono;
+    src: url("/static/font/spacemono/SpaceMono-BoldItalic.ttf");
+    font-style: italic;
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Pacifico;
+    src: url("/static/font/pacifico/Pacifico-Regular.ttf");
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
-    font-family: SpaceMono;
-    src: url("/static/font/SpaceMono-Italic.ttf");
-    font-style: italic;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: SpaceMono;
-    src: url("/static/font/SpaceMono-Bold.ttf");
-    font-style: normal;
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: SpaceMono;
-    src: url("/static/font/SpaceMono-BoldItalic.ttf");
-    font-style: italic;
-    font-weight: bold;
+    font-family: Josefin Sans;
+    src: url("/static/font/josefin-sans/JosefinSans-VariableFont_wght.ttf") format("truetype-variations");
 }
 
 :root {
@@ -37,10 +46,15 @@
 body{
     background-color: black;
     color: white;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 .monospace {
     font-family: SpaceMono, monospace;
+}
+
+.font-pacifico {
+    font-family: Pacifico, serif;
 }
 
 .header-bar {
