--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<nav th:fragment="header" class="navbar navbar-expand-lg navbar-dark header-bar">
+<nav th:fragment="header" class="navbar navbar-expand-lg navbar-dark header-bar mb-3">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/images/icon_256.png" alt="Coyote Credit" height="24" class="d-inline-block align-text-top"/>
-            Coyote Credit
+            <span class="font-pacifico">Coyote Credit</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
