--- a/src/main/resources/templates/exchange/removeAccount.html
+++ b/src/main/resources/templates/exchange/removeAccount.html
@@ -5,7 +5,7 @@
         th:replace="~{layout/basic_page :: layout (title='Remove Account', content=~{::#content})}"
 >
 <div id="content" class="container">
-    <h1>Remove Account</h1>
+    <h1 class="display-4">Remove Account</h1>
     <p>
         Are you sure you want to remove this account?
     </p>
