--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,10 +17,20 @@
 
             <hr>
 
+            <h3>Getting Started</h3>
             <p>
                 You can visit the <a class="colored-link" th:href="@{/exchanges}">Exchanges</a> page
                 to view a list of exchanges that you're participating in. Within an exchange, you
                 may buy and sell tradeable assets, and transfer funds to other accounts.
+            </p>
+            <p>
+                If you're looking to open your own exchange for your friends, colleagues, or
+                students to participate in, you can submit a
+                <a class="colored-link" th:href="@{/requestExchange}">request for a new exchange.</a>
+                <small class="text-muted">
+                    Note that exchange requests are processed manually, on a case-by-case basis, and
+                    are subject to the discretion of site administrators.
+                </small>
             </p>
         </div>
     </div>
